--- a/DigitalLibrary/DigitalLibrary.Web/Web.config
+++ b/DigitalLibrary/DigitalLibrary.Web/Web.config
@@ -21,6 +21,8 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5"  maxRequestLength="1048576"/>
+    <!--<customErrors mode="On" defaultRedirect="/Home/Error">
+    </customErrors>-->
   </system.web>
   <system.webServer>
     <modules>
